Fix talent form spacing without using br

--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -30,8 +30,18 @@ li {
 #user-timeslots {
   margin: 40px;
   border: 1px solid #D1D3D1;
+  background-color: #B6C9CD;
 }
 
+.talent-line {
+  background-color: #E6E8E6;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-radius: 2%;
+  width: 90%;
+  margin: 0px;
+  padding-left: 4px;
+}
 
 #user-timeslots {
   height: 800px;
@@ -40,14 +50,11 @@ li {
 
 form input {
   display: block;
+  width: 300px;
 }
 
 #user-select {
   display: block;
-}
-
-#user-timeslots {
-  background-color: #B6C9CD;
 }
 
 .talnt {
@@ -55,6 +62,7 @@ form input {
   margin: 10px;
 }
 
+.
 #new-ts {
   margin: 50px;
   width: 30%;
@@ -64,7 +72,7 @@ form input {
 }
 
 #user-page {
-  background-color: #CFD1CF;
+  /*background-color: #CFD1CF;*/
 }
 
 #user-talents {
